# AgentEvl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/prompts/: buildNovelProblem.prompt.md  buildNovelProblem.prompt.optimized.md
harness/: optimizer.py  process_results.py  runner.py
scenarios/agents/: agents.yaml
scenarios/mcps/: mcps.yaml
scenarios/prompts/: codeCombat.prompts.yaml
scenarios/skills/: skills.yaml
