[project]
name = "agent-test-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "dspy-ai>=3.2.1",
    "litellm<1.67",
    "openevals>=0.2.0",
    "google-generativeai>=0.8",
    "optuna>=4.9.0",
]

[project.scripts]
run-tests = "harness.runner:main"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
